[build-system]
requires = [
    "scikit-build-core>=0.3.3",
    "pybind11==2.13.6",
    "pybind11_stubgen @ git+https://github.com/sarlinpe/pybind11-stubgen@sarlinpe/fix-2024-11",
    "numpy",
    "ruff==0.6.7",
    "clang-format==19.1.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "pycolmap"
# WARNING: This version must follow the MAJOR.MINOR.PATCH format. If only
# MAJOR.MINOR is used, cibuildwheel will add a .dev0 patch version, which
# results in releasing a pre-release version on PyPI.
version = "3.12.0.dev0"
description = "COLMAP bindings"
readme = "README.md"
authors = [
  { name = "Johannes Schönberger", email = "jsch@demuc.de" },
  { name = "Mihai Dusmanu", email = "mihai.dusmanu@gmail.com" },
  { name = "Paul-Edouard Sarlin", email = "psarlin@ethz.ch" },
  { name = "Shaohui Liu", email = "b1ueber2y@gmail.com" },
  { name = "Philipp Lindenberger", email = "plindenbe@ethz.ch" },
]
license = {text = "BSD-3-Clause"}
urls = {Repository = "https://github.com/colmap/colmap"}
requires-python = ">=3.8"
dependencies = ["numpy"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build = "cp3{8,9,10,11,12}-{macosx,manylinux,win}*"
archs = ["auto64"]
test-requires = "mypy==1.12.1"
test-command = "python -c \"import pycolmap; print(pycolmap.__version__)\" &&  python -m mypy --package pycolmap --implicit-optional"

[tool.cibuildwheel.environment]
VCPKG_COMMIT_ID = "3b57fb2e1ff55613db14d2aaf0a30529289c7050"

[tool.cibuildwheel.linux]
before-all = "{package}/ci/install-colmap-almalinux.sh"

[tool.cibuildwheel.macos]
before-all = "{package}/ci/install-colmap-macos.sh"

[tool.cibuildwheel.windows]
before-all = "pwsh -File {package}/ci/install-colmap-windows.ps1"
before-build = "pip install delvewheel"
test-command = "pwsh -File {package}/ci/test-colmap-windows.ps1"
